# RL25_Assignments

./: .gitignore  README.md
01-Optimal Policy/: sol1.html  sol1.md
02-Gridworld/1_gridworld_explore/: gridworld.py
Final Project/: eval_config.json  evaluate_hockey.py  hockey_replay_buffer_parallel.py  hockey_sac.py  hockey_td3.py  remap_td3_checkpoints.py  run_client.py  show_pth_structure.py  td3-attack-r5.pth  td3-default-r5.pth
Final Project/eval_results/: results_20260226_011442.json
Final Project/final_training_opponents/: td3-attack-r5.pth  td3-defense-r3.pth
Final Project/sac_improvement_plots/alpha_auto/: eval_log.csv  train_log.csv
Final Project/wandb_version/: .env.example  README.md  config_loader.py  coordinator.py  load_env.py  requirements.txt  run_client.py  set_finished_curated.py  start_coordinator.sh  start_worker.sh  stop_after_round.py  sweep_config_parallel.yaml  train_parallel.py  train_sac_parallel.py  train_td3_parallel.py  wandb_pool.py  worker.py
HW 7/: Gym-DQN.ipynb  report.tex  value_approx.ipynb
HW1/01-Optimal Policy/: sol1.txt
HW1/01-Optimal Policy/MertHW1/: report.tex
HW2/: agent.py  gridworld.py
HW2/Report/: report.tex
HW3/: gridworld.py  report.tex  temp_ex3.txt
HW4/: 4_MultiArmedBandits.ipynb  report.tex
HW5/: report.tex
HW5/5_gridworld_qlearning/: agent.py  gridworld.py
HW6/: report.tex
HW6/6_gym_valueapprox/: policy.py  pyproject.toml  value_approx.ipynb
HW7/: Gym-DQN.ipynb  report.tex  value_approx-solution.ipynb
HW9/: report.tex
HW9/9_gym-DDPG/: DDPG.py  Gym-DDPG-plots.ipynb  requirements.txt
(+78 files in other folders)
